# shapes

./: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp  readme.md
include/: CsvFigureProvider.h  Figure.h  FigureProvider.h  ImageFigureProvider.h
src/: CsvFigureProvider.cpp  Figure.cpp  ImageFigureProvider.cpp
